--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
   "devDependencies": {
     "concurrently": "^9.2.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.4.2"
+    "prettier": "^3.4.2",
+    "wrangler": "^4.61.1"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=22.0.0"
   }
 }
