--- a/.github/workflows/deploy-main-content.yml
+++ b/.github/workflows/deploy-main-content.yml
@@ -43,14 +43,14 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: r2 object put ${{ env.R2_BUCKET }}/main-content/portfolio-main-content.js --file=./packages/main-content/dist/portfolio-main-content.js --content-type=application/javascript
+          command: r2 object put ${{ env.R2_BUCKET }}/main-content/portfolio-main-content.js --file=./packages/main-content/dist/portfolio-main-content.js --content-type=application/javascript --remote
 
       - name: Upload source map to R2
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: r2 object put ${{ env.R2_BUCKET }}/main-content/portfolio-main-content.js.map --file=./packages/main-content/dist/portfolio-main-content.js.map --content-type=application/json
+          command: r2 object put ${{ env.R2_BUCKET }}/main-content/portfolio-main-content.js.map --file=./packages/main-content/dist/portfolio-main-content.js.map --content-type=application/json --remote
 
       - name: Summary
         run: |
