--- a/.github/workflows/deploy-shared.yml
+++ b/.github/workflows/deploy-shared.yml
@@ -37,14 +37,14 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: r2 object put ${{ env.R2_BUCKET }}/shared/portfolio-shared.js --file=./packages/shared/dist/portfolio-shared.js --content-type=application/javascript
+          command: r2 object put ${{ env.R2_BUCKET }}/shared/portfolio-shared.js --file=./packages/shared/dist/portfolio-shared.js --content-type=application/javascript --remote
 
       - name: Upload source map to R2
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: r2 object put ${{ env.R2_BUCKET }}/shared/portfolio-shared.js.map --file=./packages/shared/dist/portfolio-shared.js.map --content-type=application/json
+          command: r2 object put ${{ env.R2_BUCKET }}/shared/portfolio-shared.js.map --file=./packages/shared/dist/portfolio-shared.js.map --content-type=application/json --remote
 
   # Trigger dependent MFE rebuilds
   trigger-dependents:
