--- a/.github/workflows/deploy-shared.yml
+++ b/.github/workflows/deploy-shared.yml
@@ -37,14 +37,21 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: r2 object put ${{ env.R2_BUCKET }}/shared/portfolio-shared.js --file=./packages/shared/dist/portfolio-shared.js --content-type=application/javascript --remote
+          command: r2 object put ${{ env.R2_BUCKET }}/shared/portfolio-shared.js --file=./packages/shared/dist/portfolio-shared.js --content-type=application/javascript --cache-control="public, max-age=0, must-revalidate" --remote
 
       - name: Upload source map to R2
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: r2 object put ${{ env.R2_BUCKET }}/shared/portfolio-shared.js.map --file=./packages/shared/dist/portfolio-shared.js.map --content-type=application/json --remote
+          command: r2 object put ${{ env.R2_BUCKET }}/shared/portfolio-shared.js.map --file=./packages/shared/dist/portfolio-shared.js.map --content-type=application/json --cache-control="public, max-age=0, must-revalidate" --remote
+
+      - name: Purge Cloudflare Cache
+        run: |
+          curl -X POST "https://api.cloudflare.com/client/v4/zones/${{ secrets.CLOUDFLARE_ZONE_ID }}/purge_cache" \
+            -H "Authorization: Bearer ${{ secrets.CLOUDFLARE_API_TOKEN }}" \
+            -H "Content-Type: application/json" \
+            --data '{"files":["https://assets.teofe.dev/shared/portfolio-shared.js","https://assets.teofe.dev/shared/portfolio-shared.js.map"]}'
 
   # Trigger dependent MFE rebuilds
   trigger-dependents:
