--- a/.github/workflows/deploy-navbar.yml
+++ b/.github/workflows/deploy-navbar.yml
@@ -52,10 +52,20 @@ jobs:
 
       - name: Purge Cloudflare Cache
         run: |
-          curl -X POST "https://api.cloudflare.com/client/v4/zones/${{ secrets.CLOUDFLARE_ZONE_ID }}/purge_cache" \
+          RESPONSE=$(curl -s -X POST "https://api.cloudflare.com/client/v4/zones/${{ secrets.CLOUDFLARE_ZONE_ID }}/purge_cache" \
             -H "Authorization: Bearer ${{ secrets.CLOUDFLARE_API_TOKEN }}" \
             -H "Content-Type: application/json" \
-            --data '{"files":["https://assets.teofe.dev/navbar/portfolio-navbar.js","https://assets.teofe.dev/navbar/portfolio-navbar.js.map"]}'
+            --data '{"files":["https://assets.teofe.dev/navbar/portfolio-navbar.js","https://assets.teofe.dev/navbar/portfolio-navbar.js.map"]}')
+          
+          echo "$RESPONSE"
+          
+          # Check if success is true
+          if echo "$RESPONSE" | grep -q '"success":true'; then
+            echo "✅ Cache purge successful"
+          else
+            echo "❌ Cache purge failed"
+            exit 1
+          fi
 
       - name: Summary
         run: |
