--- a/packages/main-content/package.json
+++ b/packages/main-content/package.json
@@ -13,8 +13,7 @@
     "lucide-react": "^0.330.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "single-spa-react": "^6.0.0",
-    "zustand": "^4.5.0"
+    "single-spa-react": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
