--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "packages/*"
   ],
   "scripts": {
-    "start": "npm-run-all --parallel start:shared start:navbar start:main-content start:root-config",
+    "start": "npm-run-all --parallel start:shared start:navbar start:main-content start:not-found start:root-config",
     "start:root-config": "npm run start --workspace=@portfolio/root-config",
     "start:shared": "npm run start --workspace=@portfolio/shared",
     "start:navbar": "npm run start --workspace=@portfolio/navbar",
     "start:main-content": "npm run start --workspace=@portfolio/main-content",
-    "dev": "concurrently -n shared,navbar,main,root -c blue,green,yellow,magenta \"npm run start:shared\" \"npm run start:navbar\" \"npm run start:main-content\" \"npm run start:root-config\"",
+    "start:not-found": "npm run start --workspace=@portfolio/not-found",
+    "dev": "concurrently -n shared,navbar,main,404,root -c blue,green,yellow,red,magenta \"npm run start:shared\" \"npm run start:navbar\" \"npm run start:main-content\" \"npm run start:not-found\" \"npm run start:root-config\"",
     "build": "npm-run-all build:*",
     "build:shared": "npm run build --workspace=@portfolio/shared",
     "build:navbar": "npm run build --workspace=@portfolio/navbar",
     "build:main-content": "npm run build --workspace=@portfolio/main-content",
+    "build:not-found": "npm run build --workspace=@portfolio/not-found",
     "build:root-config": "npm run build --workspace=@portfolio/root-config",
     "lint": "npm run lint --workspaces --if-present",
     "format": "prettier --write .",
