--- a/.github/workflows/deploy-navbar.yml
+++ b/.github/workflows/deploy-navbar.yml
@@ -36,26 +36,40 @@ jobs:
       - name: Build navbar
         run: npm run build --workspace=@portfolio/navbar
 
-      - name: Deploy to Cloudflare R2
+      - name: Deploy JS to Cloudflare R2
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           command: r2 object put ${{ env.R2_BUCKET }}/navbar/portfolio-navbar.js --file=./packages/navbar/dist/portfolio-navbar.js --content-type=application/javascript --cache-control="public, max-age=0, must-revalidate" --remote
 
-      - name: Upload source map to R2
+      - name: Upload JS source map to R2
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           command: r2 object put ${{ env.R2_BUCKET }}/navbar/portfolio-navbar.js.map --file=./packages/navbar/dist/portfolio-navbar.js.map --content-type=application/json --cache-control="public, max-age=0, must-revalidate" --remote
 
+      - name: Deploy CSS to Cloudflare R2
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: r2 object put ${{ env.R2_BUCKET }}/navbar/portfolio-navbar.css --file=./packages/navbar/dist/portfolio-navbar.css --content-type=text/css --cache-control="public, max-age=0, must-revalidate" --remote
+
+      - name: Upload CSS source map to R2
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: r2 object put ${{ env.R2_BUCKET }}/navbar/portfolio-navbar.css.map --file=./packages/navbar/dist/portfolio-navbar.css.map --content-type=application/json --cache-control="public, max-age=0, must-revalidate" --remote
+
       - name: Purge Cloudflare Cache
         run: |
           RESPONSE=$(curl -s -X POST "https://api.cloudflare.com/client/v4/zones/${{ secrets.CLOUDFLARE_ZONE_ID }}/purge_cache" \
             -H "Authorization: Bearer ${{ secrets.CLOUDFLARE_API_TOKEN }}" \
             -H "Content-Type: application/json" \
-            --data '{"files":["https://assets.teofe.dev/navbar/portfolio-navbar.js","https://assets.teofe.dev/navbar/portfolio-navbar.js.map"]}')
+            --data '{"files":["https://assets.teofe.dev/navbar/portfolio-navbar.js","https://assets.teofe.dev/navbar/portfolio-navbar.js.map","https://assets.teofe.dev/navbar/portfolio-navbar.css","https://assets.teofe.dev/navbar/portfolio-navbar.css.map"]}')
 
           echo "$RESPONSE"
 
@@ -72,5 +86,6 @@ jobs:
           echo "## Navbar Deployment Complete :rocket:" >> $GITHUB_STEP_SUMMARY
           echo "- **Trigger**: ${{ github.event_name }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Commit**: ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Bundle**: \`portfolio-navbar.js\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **JS Bundle**: \`portfolio-navbar.js\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **CSS Bundle**: \`portfolio-navbar.css\`" >> $GITHUB_STEP_SUMMARY
           echo "- **Cache**: Purged" >> $GITHUB_STEP_SUMMARY
