--- a/packages/navbar/package.json
+++ b/packages/navbar/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "description": "Navigation sidebar micro-frontend for portfolio",
   "scripts": {
-    "start": "webpack serve --port 9001 --mode development",
-    "build": "webpack --mode production",
+    "start": "rspack serve --port 9001 --mode development",
+    "build": "rspack build --mode production",
     "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
@@ -20,6 +20,8 @@
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.24.0",
     "@babel/preset-typescript": "^7.24.0",
+    "@rspack/cli": "^1.7.5",
+    "@rspack/core": "^1.7.5",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -30,9 +32,6 @@
     "postcss-loader": "^8.1.0",
     "style-loader": "^3.3.0",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.4.0",
-    "webpack": "^5.90.0",
-    "webpack-cli": "^5.1.0",
-    "webpack-dev-server": "^5.0.0"
+    "typescript": "^5.4.0"
   }
 }
