--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.0",
+    "three": "^0.183.1",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/three": "^0.183.1",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
